objects/EMPAUALeadly__Lead_AC_Rule_Line__c.object
<CustomObject>
    <label>Lead AC Rule Line</label>
    <nameField>
        <displayFormat>LACL-{0000}</displayFormat>
        <label>Lead AC Rule Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead AC Rule Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>EMPAUALeadly__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>within</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Lead_Field__c</fullName>
        <label>Lead Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Rule_Order__c</fullName>
        <label>Rule Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Lead_AC_Rule__c</fullName>
        <label>Lead AC Rule</label>
        <referenceTo>EMPAUALeadly__Lead_AC_Rule__c</referenceTo>
        <relationshipLabel>Lead AC Rule Lines</relationshipLabel>
        <relationshipName>Lead_AC_Rule_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Type_of_value__c</fullName>
        <label>Type of value</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>value</fullName>
                    <default>true</default>
                    <label>value</label>
                </value>
                <value>
                    <fullName>field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>